tests/semantic/invalid/missing_quality.short
int i;
model m { format onnx; path "fake.onnx"; task "x"; precision int8; input_shape "1"; backend_preference fallback; compact true; };
print "bad";
